--- a/Developer/Developer.csproj
+++ b/Developer/Developer.csproj
@@ -931,6 +931,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Unity.Mvc4.README.txt" />
+    <Content Include="Views\Admin\Worker.cshtml">
+      <SubType>Code</SubType>
+    </Content>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -967,6 +970,14 @@
     <Compile Include="Migrations\201412090910492_init2.Designer.cs">
       <DependentUpon>201412090910492_init2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201412100947020_init3.cs" />
+    <Compile Include="Migrations\201412100947020_init3.Designer.cs">
+      <DependentUpon>201412100947020_init3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201412100947497_init4.cs" />
+    <Compile Include="Migrations\201412100947497_init4.Designer.cs">
+      <DependentUpon>201412100947497_init4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\DbInitializer.cs" />
     <Compile Include="Models\ApplicationModels\EmailMessage.cs">
@@ -977,10 +988,12 @@
     </Compile>
     <Compile Include="Models\ApplicationModels\Result.cs" />
     <Compile Include="Models\ContactEmail.cs" />
-    <Compile Include="Models\EntityModels\Statistics.cs" />
     <Compile Include="Models\EntityModels\Mail.cs" />
     <Compile Include="Models\EntityModels\Offer.cs" />
     <Compile Include="Models\EntityModels\Photo.cs" />
+    <Compile Include="Models\EntityModels\Statistics.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\ViewModels\AdminWorker.cs" />
     <Compile Include="Models\ViewModels\AdType.cs" />
     <Compile Include="Models\EntityModels\ApplicationContext.cs" />
@@ -1015,6 +1028,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\ViewModels\OfferStatus.cs" />
+    <Compile Include="Models\ViewModels\Session.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\ViewModels\ShowListPhoto.cs" />
     <Compile Include="Models\ViewModels\Response.cs">
       <SubType>Code</SubType>
@@ -1027,19 +1043,28 @@
     <Compile Include="Models\ViewModels\ShowListHouse.cs" />
     <Compile Include="Models\ViewModels\ShowListLand.cs" />
     <Compile Include="Models\ViewModels\ShowWorker.cs" />
-    <Compile Include="Models\ViewModels\WorkerAdverts.cs" />
+    <Compile Include="Models\ViewModels\Visit.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\ViewModels\WorkerAdverts.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\ViewModels\WorkersViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Admin\AddAdvertService.cs" />
     <Compile Include="Services\Admin\AdminLoginService.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Services\Admin\EnumNameService.cs" />
+    <Compile Include="Services\Admin\EnumNameService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\Admin\IAddAdvertService.cs" />
     <Compile Include="Services\Admin\IAdminLoginService.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Services\Admin\IEnumNameService.cs" />
+    <Compile Include="Services\Admin\IEnumNameService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\Admin\IPhotoService.cs" />
     <Compile Include="Services\Admin\IUpdateAdvertService.cs" />
     <Compile Include="Services\Admin\IWorkerService.cs" />
@@ -1085,14 +1110,18 @@
     <Compile Include="Services\Home\ISearchService.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Services\Home\IStatisticesService.cs" />
+    <Compile Include="Services\Home\IStatisticesService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\Home\NewestAdvertService.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Services\Home\SearchService.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Services\Home\StatisticesService.cs" />
+    <Compile Include="Services\Home\StatisticesService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Services\SeedService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1138,7 +1167,9 @@
     </Content>
     <None Include="Views\Admin\Offer.cshtml" />
     <None Include="Views\Admin\Offers.cshtml" />
-    <None Include="Views\Admin\Worker.cshtml" />
+    <Content Include="Views\Admin\Statistics.cshtml">
+      <SubType>Code</SubType>
+    </Content>
     <None Include="Views\Admin\_AddFlat.cshtml" />
     <None Include="Views\Admin\_AddHouse.cshtml" />
     <None Include="Views\Admin\_AddLand.cshtml" />
@@ -1178,6 +1209,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201412090910492_init2.resx">
       <DependentUpon>201412090910492_init2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412100947020_init3.resx">
+      <DependentUpon>201412100947020_init3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412100947497_init4.resx">
+      <DependentUpon>201412100947497_init4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
